# pcl_labeling_minimal

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: param.yaml
include/pcl_labeling/: LidarCameraProjector.hpp  PointLabeler.hpp  PointLabelerRos.hpp  helpers.hpp
launch/: pcl_labeling.launch
src/: LidarCameraProjector.cpp  PointLabeler.cpp  PointLabelerRos.cpp  helpers.cpp  pcl_labeling_node.cpp
