<?xml version="1.0"?>

<package format="2">

  <name>pcl_labeling</name>
  <version>0.5.0</version>
  <description>Pointcloud Labeling</description>

  <license>BSD</license>

  <author email="vschorp@ethz.ch">Vincent Schorp</author>
  <maintainer email="vschorp@ethz.ch">Vincent Schorp</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

</package>
